# rlearn_dev.py

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
docs/: ENV_zh.md  README.md
docs/dev/: PLAN-001-legacy-migration-OUTCOME.md  PLAN-001-legacy-migration.md  PLAN-002-ppo-audit-OUTCOME.md  PLAN-002-ppo-audit.md  PLAN-003-ppo-self-contained-comments-OUTCOME.md  PLAN-003-ppo-self-contained-comments.md
examples/ant/: README.md  eval_sac.py  run_train_ppo.py  run_train_sac.py  test_record.py
labs/grpo/: demo.py
rlearn_dev/: logger.py
rlearn_dev/core/env_player/: __init__.py  base.py  env_player.py  sync_vec_env.py
rlearn_dev/methods/: README.md
rlearn_dev/methods/ac/: base_agent.py  qac_agent.py
rlearn_dev/methods/c51/: README.md
rlearn_dev/methods/dqn/: README.md
rlearn_dev/methods/ppo/: README.md  TEST.md  _utils.py
rlearn_dev/methods/sac/: README.md
rlearn_dev/nnblock/core/: noisy_linear.py
rlearn_dev/utils/: activation.py  agent.py  cuda.py  env.py  env_player.py  eval_agent.py  logger.py  misc.py  optimizer.py  recorder.py  seed.py
rlearn_dev/utils/config/: __init__.py  config.py  utils.py  verifier.py
rlearn_dev/utils/discretizer/: base.py  quantile.py  uniform.py
rlearn_dev/utils/epsilon_scheduler/: README.md  __init__.py  api.py  constant_decay.py  custom_decay.py  decay_strategy.py  epsilon_scheduler.py  exponential_decay.py  (+4 more)
tests/: .gitignore
tests/ac/: test_qac_basic.py
tests/c51/: test_c51_naive.py
tests/core/: test_vec_env_player.py
tests/ppo/: test_ppo_naive.py
tests/utils/: test_discretizer.py
(+107 files in other folders)
