[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlearn_dev"
version = "0.0.7"
description = "A project for reinforcement learning development"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Liu Shengli", email = "liushengli203@163.com"}
]
license = {text = "MIT License"}
keywords = ["reinforcement learning", "machine learning", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]

dependencies = [
    "numpy",
    "torch",
    "loguru",
    "gymnasium",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/gseismic/rlearn_dev"
Documentation = "https://github.com/gseismic/rlearn_dev/docs"
Repository = "https://github.com/gseismic/rlearn_dev"
Issues = "https://github.com/gseismic/rlearn_dev/issues"

[project.scripts]
# rlearn = "rlearn_dev.main:main_function"  # 替换为您的主函数
